// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuizSummaryContent /> should match adopt count prop 1`] = `
<styled.header>
  <styled.nav>
    <LogoLink
      size="4.5rem"
      to="/"
    />
    <Styled(styled.h1)>
      Lesson
       Summary
    </Styled(styled.h1)>
    <SessionLink
      color="blue"
      count={22}
      text="Continue Session"
      to="/lessons/"
    />
  </styled.nav>
</styled.header>
`;

exports[`<QuizSummaryContent /> should match baseline snapshot 1`] = `
<styled.header>
  <styled.nav>
    <LogoLink
      size="4.5rem"
      to="/"
    />
    <Styled(styled.h1)>
      Review
       Summary
    </Styled(styled.h1)>
    <SessionLink
      color="blue"
      count={0}
      text="Continue Session"
      to="/reviews/"
    />
  </styled.nav>
</styled.header>
`;
